--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                             <div class="name">
                                 <h3 class="title">Dec Rachelle Wenceslao</h3>
                                 <h6>Front-End Web Developer</h6>
-                                <a href="https://www.linkedin.com/in/dexter24/" target="_blank" class="btn btn-just-icon btn-link btn-dribbble"><i class="fa fa-linkedin"></i></a>
-                                <a href="https://twitter.com/xxivth_" target="_blank" class="btn btn-just-icon btn-link btn-twitter"><i class="fa fa-twitter"></i></a>
+                                <a href="https://www.linkedin.com/in/xxivth/" target="_blank" class="btn btn-just-icon btn-link btn-dribbble"><i class="fa fa-linkedin"></i></a>
+                                <a href="https://twitter.com/iamxxivth" target="_blank" class="btn btn-just-icon btn-link btn-twitter"><i class="fa fa-twitter"></i></a>
                                 <a href="https://github.com/xxivth" target="_blank" class="btn btn-just-icon btn-link btn-pinterest"><i class="fa fa-github"></i></a>
                             </div>
                         </div>
