--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </div>
                     </li> -->
                     <li class="nav-item">
-                        <a href="wenceslaoresume.pdf" download style="color: white">
+                        <a href="Dec-Rachelle-Wenceslao-CV.pdf" download style="color: white">
                             <button class="btn btn-success btn-round btn-sm"><i class="material-icons">cloud_download</i> Download Resume<div class="ripple-container"></div></button>
                             <!-- <i class="material-icons">cloud_download</i> Download Resume -->
                         </a>
